--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,6 +24,8 @@
     -->
     <title>React App</title>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOa5F6xGa-qdEkFcj5QfSdehFMC6lL0_8"></script>
+
+
   </head>
   <body>
     <noscript>
